<resources>
    <string name="app_name">Bull\'s Rent</string>
    <string name="bull_s_rent">Bull\'s Rent</string>
    <string name="nation_wide_car_rental_app">Nation Wide Car Rental App</string>
    <string name="jeep">Jeep</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up_to_start_new_journey">Sign Up To Start New Journey</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account_login">Already Have Account? Login</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="profile">Profile</string>
    <string name="balance">Balance</string>
    <string name="booking">Booking</string>

    <string name="siya_mohan">Siya Mohan</string>
    <string name="email">mohansiya@gmail.com</string>
    <string name="mobile">1234567890</string>
    <string name="update">Update</string>
    <string name="verify_mobile_no">Verify Mobile No</string>
    <string name="enter_verification">Enter verification code if not automatically authenticated.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="_124">$124</string>
    <string name="_12">12</string>
</resources>

