<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_jeepImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/jeep"
        android:transitionName="logo_image"
        android:contentDescription="@string/jeep"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there_welcome_back"
        android:textSize="40sp"
        android:padding="4dp"
        android:transitionName="logo_text"
        android:textColor="@color/colorBlack"
        android:includeFontPadding="false"
        android:fontFamily="@font/bungee"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:padding="4dp"
        android:textStyle="bold"
        android:transitionName="logo_desc"
        android:textColor="@color/colorBlack"
        android:includeFontPadding="false"
        android:fontFamily="@font/antic"
        tools:targetApi="lollipop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:transitionName="username_trans"
                    android:textColorHint="@color/colorBlack"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:targetApi="lollipop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="text"
                        >

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    android:transitionName="password_trans"
                    android:textColorHint="@color/colorBlack"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    tools:targetApi="lollipop">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        >

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_forget"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:textSize="14sp"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/login"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_margin="10dp"
                android:onClick="loginUser"
                android:transitionName="login_trans"
                android:textColor="@color/colorWhite"
                tools:targetApi="lollipop"/>

            <Button
                android:id="@+id/btn_newSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/new_user_sign_up"
                android:textSize="14sp"
                android:transitionName="new_user_trans"
                tools:targetApi="lollipop"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>