<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SplashActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@color/colorWhite"
    >

    <ImageView
        android:id="@+id/iv_jeepLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/jeep"
        android:transitionName="logo_image"
        android:contentDescription="@string/jeep"
        tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/tv_logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bull_s_rent"
        android:textSize="44sp"
        android:padding="4dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/bungee"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:transitionName="logo_text"
        android:textColor="@color/colorBlack"
        tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/tv_logoTagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nation_wide_car_rental_app"
        android:textSize="16sp"
        android:padding="4dp"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:fontFamily="@font/antic"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        />

</LinearLayout>