<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.VerifyMobileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center"
       >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.5"
           android:orientation="vertical"
           android:padding="30dp"
           android:gravity="center"
           >

           <ImageView
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:layout_gravity="center"
               android:src="@drawable/jeep"
               android:contentDescription="@string/jeep" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/bungee"
               android:text="@string/verify_mobile_no"
               android:textSize="28sp"
               android:padding="4dp"
               android:layout_marginTop="20dp"
               android:textAlignment="center"
               android:layout_gravity="center"
               android:includeFontPadding="false"
               android:textColor="@color/colorWhite"
               />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/enter_verification"
               android:textAlignment="center"
               android:layout_gravity="center"
               android:textSize="14sp"
               android:padding="4dp"
               android:fontFamily="@font/antic"
               android:textStyle="bold"
               android:textColor="@color/colorWhite"
               />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.5"
           android:orientation="vertical"
           android:padding="40dp"
           >

           <EditText
               android:id="@+id/et_verify"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/enter_otp"
               android:inputType="text"
               android:textSize="14sp"
               android:textColorHint="@color/colorWhite"
               android:backgroundTint="@color/colorWhite"
               android:importantForAutofill="no"
               tools:targetApi="lollipop"
               />

           <Button
               android:id="@+id/btn_verify"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="30dp"
               android:text="@string/verify"
               android:textAllCaps="false"
               android:textSize="16sp"
               android:textStyle="bold"
               android:textColor="@color/colorWhite"
               android:fontFamily="@font/antic"
               android:background="@color/colorBlackDark"
               />

           <ProgressBar
               android:id="@+id/progress_bar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               />

       </LinearLayout>

   </LinearLayout>

</ScrollView>