<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activities.UserProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@color/colorPrimary"
            android:padding="20dp">

            <ImageView
                android:id="@+id/iv_profileImg"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/profile"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/tv_fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/iv_profileImg"
                android:layout_toRightOf="@id/iv_profileImg"
                android:fontFamily="@font/antic"
                android:includeFontPadding="false"
                android:padding="4dp"
                android:text="@string/siya_mohan"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/tv_userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_fullName"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/iv_profileImg"
                android:layout_toRightOf="@id/iv_profileImg"
                android:padding="2dp"
                android:text="@string/siya_mohan"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:padding="6dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="10dp"
                app:strokeColor="@color/colorBlackDark"
                app:strokeWidth="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="6dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/profile"
                        android:src="@drawable/balance" />

                    <TextView
                        android:id="@+id/tv_payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="@string/_124"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_payDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_payment"
                        android:layout_centerHorizontal="true"
                        android:text="@string/balance"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="10dp"
                app:strokeColor="@color/colorBlackDark"
                app:strokeWidth="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="6dp">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/profile"
                        android:src="@drawable/booking" />

                    <TextView
                        android:id="@+id/tv_booking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/bungee"
                        android:includeFontPadding="false"
                        android:text="@string/_12"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_bookDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_booking"
                        android:layout_centerHorizontal="true"
                        android:text="@string/booking"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_fullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/full_name"
                android:textColorHint="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/user_icon"
                    android:drawableLeft="@drawable/user_icon"
                    android:drawablePadding="8dp"
                    android:inputType="text"
                    android:text="@string/siya_mohan">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_userEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_id"
                android:textColorHint="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/email_icon"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress"
                    android:text="@string/email">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_userMobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/mobile_no"
                android:textColorHint="@color/colorBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/mobile_icon"
                    android:drawableLeft="@drawable/mobile_icon"
                    android:drawablePadding="8dp"
                    android:inputType="phone"
                    android:text="@string/mobile">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profile_userPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorBlack"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/password_icon"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:text="@string/password">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/antic"
                android:includeFontPadding="false"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:onClick="dataUpdate"
                android:layout_marginBottom="8dp"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>